fixed header on mobile

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,9 +11,21 @@
     padding: 0;
 }
 
+
+/* check for overflowed elements - use mobile devtools simulator
+
+* {
+    outline: 1px solid red;
+}
+
+*/
+
+
 body {
     font-size: 100%;
     font-family: 'Lato', sans-serif;
+    
+    //overflow-x: hidden;
     
     
     @include breakpoint (max-width 1130px) {
