--- a/scss/modules/_cards.scss
+++ b/scss/modules/_cards.scss
@@ -5,7 +5,7 @@
     
     &__grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(315px, 1fr));
         grid-gap: 2em;
         align-items: center;
     }
