--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -124,6 +124,14 @@
         text-align: center;
     }
 
+    &__me, &__me:visited {
+        color: inherit;
+        transition: color 300ms ease-in;
+        
+        &:hover {
+            color: #ccc;
+        }
+    }
     
 }
 
